--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,10 @@
 Package: KernSmooth
-Version: 2.22-3
-Author: S original (http://www.biostat.harvard.edu/~mwand) by Matt Wand.
-  R port by  Brian Ripley <ripley@stats.ox.ac.uk>.
+Version: 2.22-4
+Title: Functions for kernel smoothing for Wand &Jones (1995)
+Author: S original by Matt Wand.
+	R port by  Brian Ripley <ripley@stats.ox.ac.uk>.
 Description: functions for kernel smoothing (and density estimation)
-  corresponding to book: Wand, M.P. and Jones, M.C. (1995) "Kernel Smoothing".
+  corresponding to the book: 
+  Wand, M.P. and Jones, M.C. (1995) "Kernel Smoothing".
 License: Unlimited distribution (from Dr Wand).
+URL: http://www.biostat.harvard.edu/~mwand
