--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,11 @@
 Package: KernSmooth
-Version: 2.22-4
+Priority: recommended
+Version: 2.22-5
+Date: 2001-Mar-31
 Title: Functions for kernel smoothing for Wand &Jones (1995)
 Author: S original by Matt Wand.
 	R port by  Brian Ripley <ripley@stats.ox.ac.uk>.
+Maintainer: Brian Ripley <ripley@stats.ox.ac.uk>
 Description: functions for kernel smoothing (and density estimation)
   corresponding to the book: 
   Wand, M.P. and Jones, M.C. (1995) "Kernel Smoothing".
