--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: KernSmooth
 Priority: recommended
-Version: 2.22-7
-Date: 2001-Dec-21
+Version: 2.22-8
+Date: 2002-08-27
 Title: Functions for kernel smoothing for Wand & Jones (1995)
 Author: S original by Matt Wand.
 	R port by  Brian Ripley <ripley@stats.ox.ac.uk>.
