--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: KernSmooth
 Priority: recommended
-Version: 2.23-5
-Date: 2011-05-03
+Version: 2.23-6
+Date: 2011-05-31
 Title: Functions for kernel smoothing for Wand & Jones (1995)
-Author: S original by Matt Wand. R port by Brian Ripley
+Author: Matt Wand <Matt.Wand@uts.edu.au> R port by Brian Ripley
         <ripley@stats.ox.ac.uk>.
 Maintainer: Brian Ripley <ripley@stats.ox.ac.uk>
 Depends: R (>= 2.5.0), stats
@@ -12,6 +12,6 @@ Description: functions for kernel smoothing (and density estimation)
         corresponding to the book: Wand, M.P. and Jones, M.C. (1995)
         "Kernel Smoothing".
 License: Unlimited
-Packaged: 2011-05-06 06:58:40 UTC; ripley
+Packaged: 2011-06-08 06:08:00 UTC; ripley
 Repository: CRAN
-Date/Publication: 2011-05-06 15:50:00
+Date/Publication: 2011-06-09 14:34:17
